--- a/dashboard/static/app/components/stock/uptakerate.html
+++ b/dashboard/static/app/components/stock/uptakerate.html
@@ -12,8 +12,8 @@
       <table ng-table="vm.tableParamsAlldistricts" class="row-border hover table table-condensed table-striped" show-filter="true">
           <tr ng-repeat="row in $data">
               <td title="'District'" sortable="'district_name'" filter="{district_name: 'text'}" >{{row.district_name}}</td>
-              <td title="'Consumed'" sortable="'consumed'" class="text-center" >{{row.consumed | number:0}}</td>
-              <td title="'Available'" sortable="'available_stock'" class="text-center" >{{row.available_stock | number:0}}</td>
+              <td title="'Children Immunized'" sortable="'consumed'" class="text-center" >{{row.consumed | number:0}}</td>
+              <td title="'Stock Consumed'" sortable="'available_stock'" class="text-center" >{{row.available_stock | number:0}}</td>
               <td title="'Uptake'" sortable="'uptake_rate'"  >{{row.uptake_rate}}%</td>
            </tr>
 
