Added Map Legend on Red Category

--- a/dashboard/static/css/app.css
+++ b/dashboard/static/css/app.css
@@ -181,6 +181,18 @@ td,
 th {
   padding: 0;
 }
+#legend {
+    padding: 1.5em 0 0 1.5em;
+}
+
+li.key {
+    border-top-width: 15px;
+    border-top-style: solid;
+    font-size: .75em;
+    width: 7%;
+    padding-left: 0;
+    padding-right: 0;
+}
 /*! Source: https://github.com/h5bp/html5-boilerplate/blob/master/src/css/main.css */
 @media print {
   *,
