more on Coverage

--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -26,20 +26,23 @@
         #tooltip {
             position: absolute;
             z-index: 2;
-            background: rgba(255,255,255,0.8);
-            border-radius: 4px;
+            background: #000000;
+            border-radius: 10px;
             width: 105px;
-            height: 35px;
-            color: black;
+            height: 8%;
+            color: #ffffff;
             font-size: 14px;
-            padding: 5px;
+            padding: 10px;
             top: -150px;
             left: -150px;
             font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
         }
 
         #tooltip p {
-            margin: 0;
+            width: 120px;
+    bottom: 100%;
+            top: 50%;
+    margin-inside: 10%;
         }
 
         #tooltip p.value {
