Change on Capacity

--- a/dashboard/static/app/components/fridge/capacity.html
+++ b/dashboard/static/app/components/fridge/capacity.html
@@ -68,7 +68,7 @@
 
                 <div class="quality_test">
                     <span class="quality_test__metric"> {{ child.utsufficient | number:0 }}%</span>
-                    <span class="quality_test__description">{{"With Adequate Capacity" | uppercase}}</span>
+                    <span class="quality_test__description">{{"With sufficient Capacity" | uppercase}}</span>
                 </div>
 
                 <div class="quality_test">
