--- a/dashboard/static/app/components/planning/plan.html
+++ b/dashboard/static/app/components/planning/plan.html
@@ -37,9 +37,9 @@
         <div class="col-md-12">
          <h3>KEY METRICS</h3>
             <div class="quality_test" ui-sref-active="quality_test_active">
-                <a ui-sref="surveillance.cases">
-                    <span class="quality_test__metric"> 0 </span>
-                    <span class="quality_test__description">{{"Total Cases" | uppercase}}</span>
+                <a ui-sref="plan.awp">
+
+
                 </a>
             </div>
         </div>
