change build folder

--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -108,7 +108,7 @@
 <script type="text/javascript" src='{% static "vendor/lodash/lodash.min.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/checklist-model/checklist-model.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/d3/d3.js"%}'></script>
-<script type="text/javascript" src='{% static "vendor/nvd3/build/nv.d3.js"%}'></script>
+<script type="text/javascript" src='{% static "vendor/nvd3/puild/nv.d3.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/c3/c3.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/angular-nvd3/dist/angular-nvd3.js"%}'></script>
 <script type="text/javascript" src='{% static "vendor/angular-chart/angular-chart.js"%}'></script>
