--- a/dashboard/static/app/components/planning/awp.html
+++ b/dashboard/static/app/components/planning/awp.html
@@ -1,28 +1,32 @@
-<div ng-controller="SurveillanceController">
-    <h4 class="text-center">TOTAL CASES</h4>
-    <div class="col-md-8">
-        <div class="page_graph">
-            <nvd3 options="options" data="data.slice(1,4)"></nvd3>
+<div ng-controller="PlanningController as vm">
+    <div class="col-md-6 text-left">
+        <div class="page_graph ">
+            
         </div>
     </div>
-    <div class="col-md-4">
 
-           <div id="custom-search-input">
-                <div class="input-group col-md-12">
-                    <input type="text" class="  search-query form-control" ng-model="searchText" placeholder="Search" />
-                    <span class="input-group-btn">
-                        <button class="btn btn-danger" type="button">
-                            <span class=" glyphicon glyphicon-search"></span>
-                        </button>
-                    </span>
-                </div>
-           </div>
+    <div class="col-md-6">
+        <ul class="nav nav-tabs">
+          <li class="active"><a data-toggle="tab" href="#funded">Funded</a></li>
+          <li><a data-toggle="tab" href="#unfunded">UnFunded</a></li>
+        </ul>
+    <br>
 
-        <table ng-table="tableParams" class="table" show-filter="false">
-            <tr ng-repeat="district in data | filter:searchText">
-                <td title="'District'" sortable="'district'">{{district.key}}</td>
-                <td title="'Units'" sortable="'value'">{{getTotal(district.key)}}</td>
+    <div class="tab-content">
+        <div id="funded" class="tab-pane fade in active">
+        <table ng-table="vm.tableParamsfunded" class="row-border hover table table-condensed table-striped"  show-filter="true">
+            <tr ng-repeat="row in $data">
+                <td title="'Area'" sortable="'area'" filter="{area: 'text'}"  >{{row.area}}</td>
+                <td title="'Qtr1'" sortable="'Q1'" class="text-center" >{{row.Q1 | number:0}}</td>
+                <td title="'Qtr2'" sortable="'Q2'" class="text-center" >{{row.Q2}}</td>
+                <td title="'Qtr3'" sortable="'Q3'" class="text-center" >{{row.Q3}}</td>
+                <td title="'Qtr4'" sortable="'Q4'" class="text-center" >{{row.Q4}}</td>
             </tr>
+
         </table>
+
+        </div>
     </div>
+    </div>
+
 </div>
