--- a/dashboard/static/app/components/planning/plan.html
+++ b/dashboard/static/app/components/planning/plan.html
@@ -1,50 +1,18 @@
 <div ng-controller="MainController as shell">
 
-    <div class="row range_filter">
-
-        <div class="filter-title col-md-12">
-            <span class="filter-title h3">YEAR</span>
+    <div class="row range_filter" style="align-content: center">
+        <br>
+        <div class="col-md-12 main-filters" style="align-content: stretch">
+            <span class="filter-title h3">YEAR<br></span>
+            <select name="year" class="form-control filter criteria-select" ng-model="shell.selectedYear"
+                    ng-options="year as year.value for year in shell.year">
+            </select>
         </div>
 
-        <div class="col-md-12 main-filters">
-            <select name="name" class="form-control filter criteria-select" ng-model="shell.startMonth"
-                ng-options="month as month.name group by month.year for month in shell.months">
-            </select>
-        <!--<div class="spacer">
-            <h5 class="text-center"> - </h5>
-        </div>
-            <select name="month" class="form-control filter criteria-select" ng-model="shell.endMonth"
-                    ng-options="month as month.name group by month.year for month in shell.months.slice(shell.months.indexOf(shell.startMonth))">
-            </select>
-        <div class="spacer">
-            <h5 class="text-center"> - </h5>
-        </div>
-            <select name="vaccine" class="form-control filter criteria-select" ng-model="shell.selectedVaccine"
-                    ng-options="vaccine as vaccine.name for vaccine in shell.vaccines">
-            </select>
-        <div class="spacer">
-            <h5 class="text-center"> - </h5>
-        </div>
-            <select name="district" class="form-control filter criteria-select" ng-model="shell.selectedDistrict"
-                    ng-options="district as district.name for district in shell.districts">
-            </select>
-        </div>-->
     </div>
 
 
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-         <h3>KEY METRICS</h3>
-            <div class="quality_test" ui-sref-active="quality_test_active">
-                <a ui-sref="plan.awp">
 
-
-                </a>
-            </div>
-        </div>
-
-    </div>
     <div class="row">
         <div class="col-md-12">
             <div class="test-area clearfix">
