--- a/dashboard/static/app/components/planning/awp.html
+++ b/dashboard/static/app/components/planning/awp.html
@@ -1,7 +1,7 @@
 <div ng-controller="PlanningController as vm">
     <div class="col-md-6 text-left">
         <div class="page_graph ">
-            
+            <nvd3 options="vm.fundactivity" data="vm.graphfundedactivities"></nvd3>
         </div>
     </div>
 
