Activities py priority level

--- a/dashboard/static/app/components/planning/plan.html
+++ b/dashboard/static/app/components/planning/plan.html
@@ -25,6 +25,13 @@
                 </a>
             </div>
 
+            <div class="quality_test" ui-sref-active="quality_test_active">
+                <a ui-sref="planning.priority" ui-sref-opts="{reload: true}">
+                    <span class="quality_test__metric">  </span>
+                    <span class="quality_test__description">{{"priority Level" | uppercase}}</span>
+                </a>
+            </div>
+
 
         </div>
     </div>
