Changes on stock level tab

--- a/dashboard/static/app/components/stock/stockonhand.html
+++ b/dashboard/static/app/components/stock/stockonhand.html
@@ -17,7 +17,9 @@
           <li><a data-toggle="tab" href="#below-min">Below MIN</a></li>
           <li><a data-toggle="tab" href="#within-range">Within RANGE</a></li>
           <li><a data-toggle="tab" href="#above-max">Above MAX</a></li>
-          <li><a data-toggle="tab" href="#Search">Search</a></li>
+          <li><a data-toggle="tab" href="#Search">
+              <i class="glyphicon glyphicon-search"></i>
+          </a></li>
         </ul>
     <br>
     <div class="tab-content">
