more fixed on the current modules

--- a/dashboard/static/app/components/fridge/fridge.html
+++ b/dashboard/static/app/components/fridge/fridge.html
@@ -15,7 +15,7 @@
                 </select>
             </div>
         <div class="spacer">
-            <h5 class="text-center"> - </h5>
+            <h5 class="text-center">  </h5>
         </div>
             <div>
                 End Quarter<br>
@@ -24,7 +24,7 @@
                 </select>
             </div>
         <div class="spacer">
-            <h5 class="text-center"> - </h5>
+            <h5 class="text-center">  </h5>
         </div>
             <div>
                 District<br>
@@ -33,7 +33,7 @@
                 </select>
             </div>
         <div class="spacer">
-            <h5 class="text-center"> - </h5>
+            <h5 class="text-center">  </h5>
         </div>
             <div>
                 Care Level<br>
