--- a/dashboard/static/app/components/stock/stockonhand.html
+++ b/dashboard/static/app/components/stock/stockonhand.html
@@ -1,7 +1,7 @@
 
 <div ng-controller="StockController as vm">
 
-    <h4 class="text-center">Stock Balances of {{child.vaccine }} at the end of {{child.themonth | date:'MMM yyyy' }}</h4>
+    <h4 class="text-center"><b>Stock Balances of </b>{{child.vaccine }}<b> at the Beginning of</b> {{child.themonth | date:'MMM yyyy' }}</h4>
     <br>
     <br>
 
@@ -29,7 +29,7 @@
        <table ng-table="vm.tableParams_so" class="row-border hover table table-condensed table-striped"  show-filter="true">
             <col align="right">
             <tr ng-repeat="row in $data">
-                <td title="'District'" sortable="'district_name'">{{row.district_name}}</td>
+                <td title="'District'" sortable="'district_name'">{{row.district_name}}</td><span class="tooltip"> ######</span>
                 <td title="'Balances'" sortable="'at_hand'" class="text-center" >{{row.at_hand | number:0}}</td>
                 <td title="'Min'" sortable="'stock_requirement__minimum'" class="text-center" >{{row.stock_requirement__minimum}}</td>
                 <td title="'Max'" sortable="'stock_requirement__maximum'" class="text-center" >{{row.stock_requirement__maximum}}</td>
