--- a/dashboard/static/app/components/stock/stock.html
+++ b/dashboard/static/app/components/stock/stock.html
@@ -7,24 +7,28 @@
         </div>
 
         <div class="col-md-12 main-filters">
+            Start Month<br>
             <select name="name" class="form-control filter criteria-select" ng-model="shell.startMonth"
                 ng-options="month as month.name group by month.year for month in shell.months">
             </select>
         <div class="spacer">
-            <h5 class="text-center"> - </h5>
+            <h5 class="text-center">  </h5>
         </div>
+            End Month<br>
             <select name="month" class="form-control filter criteria-select" ng-model="shell.endMonth"
                     ng-options="month as month.name group by month.year for month in shell.months.slice(shell.months.indexOf(shell.startMonth))">
             </select>
         <div class="spacer">
-            <h5 class="text-center"> - </h5>
+            <h5 class="text-center">  </h5>
         </div>
+            Antigen<br>
             <select name="vaccine" class="form-control filter criteria-select" ng-model="shell.selectedVaccine"
                     ng-options="vaccine as vaccine.name for vaccine in shell.vaccines">
             </select>
         <div class="spacer">
-            <h5 class="text-center"> - </h5>
+            <h5 class="text-center">  </h5>
         </div>
+            District<br>
             <select name="district" class="form-control filter criteria-select" ng-model="shell.selectedDistrict"
                     ng-options="district as district.name for district in shell.districts">
             </select>
@@ -37,16 +41,20 @@
          <h3>KEY METRICS</h3>
             <br>
 
-            <div class="quality_test" ui-sref-active="quality_test_active">
+            <div class="quality_test text-center" ui-sref-active="quality_test_active">
                 <a ui-sref="stock.stockonhand" ui-sref-opts="{reload: true}">
                     <span class="quality_test__metric"> {{ child.stockedout | number:0 }}% </span>
-                    <span class="quality_test__description">{{"Districts Stocked Out" | uppercase}}</span>
+                    <span class="quality_test__description easytooltip">{{"Districts Stocked Out" | uppercase}}
+                    <span class="easytooltiptext" ><b>Percentage of Districts reporting zero balance</b></span>
+                    </span>
                 </a>
             </div>
-            <div class="quality_test" ui-sref-active="quality_test_active">
+            <div class="quality_test text-center" ui-sref-active="quality_test_active">
                 <a ui-sref="stock.distribution" ui-sref-opts="{reload: true}">
                     <span class="quality_test__metric"> {{ child.refreshrate | number:0 }}%</span>
-                    <span class="quality_test__description">{{"Refill Rate" | uppercase}}</span>
+                    <span class="quality_test__description easytooltip">{{"Refill Rate" | uppercase}}
+                    <span class="easytooltiptext"  ><b>Doses distributed by NMS / Doses ordered </b>expressed as a percentage</span>
+                    </span>
                 </a>
             </div>
             <!--<div class="quality_test" ui-sref-active="quality_test_active">
@@ -62,10 +70,13 @@
                 </a>
             </div>-->
 
-            <div class="quality_test" ui-sref-active="quality_test_active">
+            <div class="quality_test text-center" ui-sref-active="quality_test_active">
                 <a ui-sref="stock.uptakerate" ui-sref-opts="{reload: true}">
                     <span class="quality_test__metric"> {{ child.uptake | number:0 }}%</span>
-                    <span class="quality_test__description">{{"Uptake Rate" | uppercase}}</span>
+                    <span class="quality_test__description easytooltip " >{{"Uptake Rate" | uppercase}}
+                    <span class="easytooltiptext" ><b>Doses consumed /Available Doses </b>expressed as a percentage</span>
+                    </span>
+
                 </a>
             </div>
 
