--- a/dashboard/templates/layout.html
+++ b/dashboard/templates/layout.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href='{% static "vendor/nvd3/puild/nv.d3.css"%}'>
     <link rel="stylesheet" href='{% static "vendor/angular-datatables/dist/css/angular-datatables.min.css"%}'>
     <link rel="stylesheet" href='{% static "vendor/leaflet/dist/leaflet.css"%}' />
+    <link rel="stylesheet" href='{% static "css/tooltipstyle.css"%}' />
+    
     <style>
         #tooltip {
             position: absolute;
