More Changes based on the feedback from the vaccines Team as of begining of August.

--- a/dashboard/static/app/components/fridge/facilities.html
+++ b/dashboard/static/app/components/fridge/facilities.html
@@ -20,5 +20,20 @@
 
     </div>
 
+    <div class="row">
+        <div class="col-md-12 text-center">
+            <div class="test-area clearfix ">
+
+                <span class="text-center"><u><b>ELIGIBLE</b></u> – refers to facilities expected to be offering static and outreach immunization services
+
+                <br>
+                <br>
+                </span>
+                <br>
+
+            </div>
+        </div>
+    </div>
+
 
 </div>
